# ayon-ftrack

./: .gitignore  README.md  __init__.py  create_package.py  mkdocs.yml  package.py  pyproject.toml  ruff.toml  settings.py  version.py  versions.json
1.4.12/: 404.html  (+3 more)
services/leecher/: Dockerfile  Makefile  docker-compose.yml  manage.ps1  pyproject.toml
services/leecher/ayclient/: __init__.py  api.py  config.py  events.py  projects.py
services/leecher/leecher/: __init__.py  __main__.py  listener.py
services/processor/: .gitignore  Dockerfile  Makefile  docker-compose.yml  manage.ps1  pyproject.toml
services/processor/processor/: __init__.py  __main__.py  download_utils.py  ftrack_base_handler.py  ftrack_server.py  ftrack_session.py  server.py
services/processor/processor/base_handlers/: action_multiple_notes.py  action_prepare_project.py  action_push_frame_values_to_task.py  event_next_task_update.py  event_push_frame_values_to_task.py  event_task_to_version_status.py  event_version_to_task_statuses.py
services/processor/processor/default_handlers/: action_clone_review_session.py  action_create_lists.py  action_create_review_session.py  action_delete_entities.py  action_multiple_notes.py  action_prepare_project.py  action_private_project_detection.py  action_project_component_sizes.py  action_push_frame_values_to_task.py  action_sync_from_ftrack.py  action_sync_users.py  action_tranfer_hierarchical_values.py  event_del_avalon_id_from_new.py  event_first_version_status.py  event_next_task_update.py  event_push_frame_values_to_task.py  event_sync_comments.py  event_sync_from_ftrack.py  event_sync_links.py  event_task_to_parent_status.py  event_task_to_version_status.py  event_thumbnail_updates.py  (+2 more)
(+1157 files in other folders)
