[tool.poetry]
name = "ftrack-collector"
version = "0.1.0"
description = ""
authors = ["Martastain <martas@imm.cz>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
ftrack-python-api = "2.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
