[tool.poetry]
name = "ftrack-processor"
version = "0.2.5-dev.1"
description = ""
authors = ["Martastain <martas@imm.cz>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
ayon-python-api = ">=0.5.1"
ftrack-python-api = "2.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
