[tool.poetry]
name = "ftrack-processor"
version = "1.1.10"
description = ""
authors = ["Ynput s.r.o. <info@ynput.io>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
ayon-python-api = "1.0.0"
ftrack-python-api = "2.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
